[package]
name = "upnp-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
http = { version = "1.1.0", default-features = false }
hyper = { version = "1.4.0", default-features = false }
pin-utils = "0.1.0"
rupnp = "2.0.0"
ssdp-client = "2.0.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
